<resources>
    <string name="app_name">CitizensData</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_occupation">Occupation</string>
    <string name="prompt_maritalStatus">Marital Status</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="update">Update</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="channel_description">My channel Description</string>
    <string name="channel_name">My channel Name</string>
</resources>